--- a/4S230GX/niosii-mmu-4sgx230-qsys/ghrd_4sgx230.qsf
+++ b/4S230GX/niosii-mmu-4sgx230-qsys/ghrd_4sgx230.qsf
@@ -41,11 +41,8 @@ set_global_assignment -name FAMILY "Stratix IV"
 set_global_assignment -name DEVICE EP4SGX230KF40C2
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 9.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "12:52:50  JULY 31, 2009"
-set_global_assignment -name LAST_QUARTUS_VERSION 11.0
-set_global_assignment -name USE_GENERATED_PHYSICAL_CONSTRAINTS OFF -section_id eda_blast_fpga
-set_global_assignment -name DEVICE_FILTER_PACKAGE FBGA
-set_global_assignment -name DEVICE_FILTER_PIN_COUNT 1517
-set_global_assignment -name DEVICE_FILTER_SPEED_GRADE 2
+set_global_assignment -name LAST_QUARTUS_VERSION "11.1 SP1"
+#set_global_assignment -name USE_GENERATED_PHYSICAL_CONSTRAINTS OFF -section_id eda_blast_fpga
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
@@ -881,7 +878,7 @@ set_instance_assignment -name OUTPUT_TERMINATION "SERIES 50 OHM WITH CALIBRATION
 set_instance_assignment -name OUTPUT_TERMINATION "SERIES 50 OHM WITH CALIBRATION" -to ddr3top_dqsn[0] -tag __qsys_ghrd_4sgx230_ddr3_top_p0
 set_instance_assignment -name OUTPUT_TERMINATION "SERIES 50 OHM WITH CALIBRATION" -to ddr3top_dqsn[1] -tag __qsys_ghrd_4sgx230_ddr3_top_p0
 set_global_assignment -name TOP_LEVEL_ENTITY ghrd_4sgx230
-set_global_assignment -name USE_CONFIGURATION_DEVICE OFF
+#set_global_assignment -name USE_CONFIGURATION_DEVICE OFF
 set_global_assignment -name CYCLONEII_OPTIMIZATION_TECHNIQUE SPEED
 set_global_assignment -name STATE_MACHINE_PROCESSING "ONE-HOT"
 set_global_assignment -name MUX_RESTRUCTURE OFF
@@ -1005,4 +1002,5 @@ set_instance_assignment -name ENABLE_BENEFICIAL_SKEW_OPTIMIZATION_FOR_NON_GLOBAL
 set_instance_assignment -name PLL_ENFORCE_USER_PHASE_SHIFT ON -to qsys_ghrd_4sgx230_inst|ddr3_top|p0|controller_phy_inst|memphy_top_inst|upll_memphy|altpll_component|auto_generated|pll1 -tag __qsys_ghrd_4sgx230_ddr3_top_p0
 set_global_assignment -name UNIPHY_SEQUENCER_DQS_CONFIG_ENABLE ON
 set_global_assignment -name UNIPHY_TEMP_VER_CODE 827605957
+
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
